--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.102",
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "aws-cdk": "2.37.1",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
+    "@types/aws-lambda": "^8.10.108",
+    "@types/jest": "^29.2.3",
+    "@types/node": "18.11.9",
+    "@types/prettier": "2.7.1",
+    "aws-cdk": "2.51.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
+    "typescript": "~4.9.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.37.1",
-    "constructs": "^10.0.0",
-    "firebase-admin": "^11.0.1",
+    "aws-cdk-lib": "2.51.0",
+    "aws-sdk": "^2.1257.0",
+    "constructs": "^10.1.163",
+    "firebase-admin": "^11.3.0",
     "mysql": "^2.18.1",
     "source-map-support": "^0.5.21"
   }
