--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.11.9",
     "@types/prettier": "2.7.1",
     "aws-cdk": "2.51.0",
+    "esbuild": "^0.18.17",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
